# dss_capi

./: .gitignore  ORIGINAL_LICENSE  README.md
.github/workflows/: builds.yml
Source/CMD/: CmdForms.pas  opendsscmd.pas
Source/CommandLine/: DSSForms.pas
Source/Common/: Bus.pas  CktElement.pas  DSSCallBackRoutines.pas  DSSClass.pas  DSSClassDefs.pas  ExportCIMXML.pas  ExportResults.pas  ShowResults.pas  Solution.pas  SolutionAlgs.pas
Source/Controls/: CapControl.pas  ControlElem.pas  Recloser.pas  RegControl.pas  Relay.pas  StorageController.pas  SwtControl.pas
Source/DLL/: ImplActiveClass.pas  ImplBus.pas  ImplCapControls.pas  ImplCapacitors.pas  ImplCtrlQueue.pas  ImplDSS.pas  ImplDSSElement.pas  ImplDSSProgress.pas  ImplDSS_Executive.pas  ImplDSSimComs.pas  ImplFuses.pas  ImplIsources.pas  ImplLoadShapes.pas  ImplLoads.pas  ImplPDElements.pas  ImplPVSystems.pas  ImplReclosers.pas  ImplRegControls.pas  ImplRelays.pas  ImplSettings.pas  ImplSolution.pas  ImplSwtControls.pas  ImplVsources.pas  ImplXYCurves.pas
Source/Executive/: ExecOptions.pas  PlotOptions.pas  ShowOptions.pas
Source/Forms/: About.pas  HelpForm.pas  Panel.pas  ProgressForm.pas
Source/General/: CNData.pas  CableData.pas  ConductorData.pas  DSSObject.pas  LineConstants.pas  LineGeometry.pas  LineSpacing.pas  PriceShape.pas  Spectrum.pas  TCC_Curve.pas  TSData.pas  TempShape.pas  WireData.pas  XfmrCode.pas
Source/Meters/: EnergyMeter.pas  MemoryMap_lib.pas  MeterElement.pas  Monitor.pas  ReduceAlgs.pas  Sensor.pas
Source/PCElements/: GICLine.pas  GICsource.pas  PCClass.pas  Storage.pas  UPFC.pas  VSConverter.pas  VSource.pas  generator.pas  vccs.pas
Source/PDElements/: AutoTrans.pas  Fault.pas  PDClass.pas  PDElement.pas  (+2 more)
examples/UserModels/: CMakeLists.txt  CppIndMach012.cpp
include/: dss_UserModels.h
(+330 files in other folders)
